# ApsimxpyModule

./: CornSoybean.apsimx  CornSoybean.db-shm  CornSoybean.db-wal  CornSoybean_C.apsimx  CornSoybean_NC.apsimx  CornSoybean_NE.apsimx  Dockerfile  GTDtransformation.ipynb  Module.apsimx  Pipfile  README.md  SoybeanCorn.apsimx  docker-compose.yml
.ipynb_checkpoints/: graph-checkpoint.ipynb
apsimxpy/: __init__.py  clock.py  helptree.py  microclimate.py  pyproject.toml  utils.py  weather.py
apsimxpy/apsimxpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apsimxpy/field/: __init__.py  surfaceorganicmatter.py
apsimxpy/field/management/: __init__.py  cropmanagement.py  fertilize.py
apsimxpy/field/soil/: __init__.py  chemical.py  organic.py  physical.py  soil_water.py  water.py
apsimxpy/field/soil/ssurgo/: saxton.py  sdaprop.py  soil_apsim.py  soil_extraction.py
calibration/: manager_calibration.ipynb
run_simulations/: graph.ipynb  run_sim.py
weather/: w_40.837747769654506_-86.62636722068576.met  w_id_1036.met  w_id_1039.met  w_id_1041.met  w_id_1042.met  w_id_1043.met  w_id_1044.met  w_id_1045.met  w_id_1047.met  w_id_1048.met  w_id_1049.met  w_id_1050.met  w_id_1089.met  w_id_1096.met  w_id_1145.met  w_id_1147.met  w_id_1148.met  w_id_1150.met  w_id_1152.met  w_id_1155.met  w_id_1156.met  w_id_1157.met  w_id_1158.met  w_id_1161.met  w_id_1162.met  w_id_1213.met  w_id_1214.met  w_id_1215.met  w_id_1217.met  w_id_1218.met  w_id_1219.met  w_id_1220.met  w_id_1221.met  w_id_1222.met  w_id_1223.met  w_id_1224.met  w_id_1316.met  w_id_1318.met  w_id_1320.met  (+162 more)
(+30 files in other folders)
