[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apsimxpy"
version = "0.1.0"
description = "apsim in python using a docker image"
authors = [
    { name="jjolaher", email="jjolaher@purdue.edu" }
]
dependencies = [
    "numpy",
    "pandas",
    "anytree",
    "datetime"  
]
